--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <link
       rel="stylesheet"
       href="style.css"
-      type="text/css"
-      media="all" />
+      type="text/css" />
+    <link rel="manifest" href="/manifest.json">
   </head>
   <body>
     <!-- judul web -->
@@ -57,8 +57,12 @@
           Tambahkan
         </button>
       </form>
-
-      <p style="height: 50vh"></p>
+      
+      <div class="tawarkanInstallApp installAppHilang">
+        <p>Ingin tambahkan ke Home Screen untuk akses lebih cepat dan mudah? klik icon titik tiga pada browser dan klik add to home screen > install</p>
+        <div class="boxTombol">
+          <button id="tutupInfo" type="button">Tutup</button>
+      </div>
     </main>
 
     <script
@@ -67,3 +71,4 @@
       charset="utf-8"></script>
   </body>
 </html>
+
